# example_ci_service

./: .travis.yml  README.md  setup.cfg  tox.ini
src/example_ci_service/: __init__.py  example.py
tests/: conftest.py  test_example.py
