[metadata]
name = example_ci_service
version = 0.0.1
author = Dean Hope Robertson
author_email = deanhoperobertson@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    schedule
    pytest

[options.extras_require]
test =
    pytest
    tox

[options.packages.find]
where = src